5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1758_2390.log
== SUBMITION (2019-05-29 22:11:15) 
-- CODE:
from numpy import *
tr = array(eval(input("b: ")))
maior_tr = max(tr)
i = 0
while(i<size(tr)):
	if(tr[i] == maior_tr):
		mes = i + 1
	i = i + 1
prnt(mes)
-- EXECUTION TIME:
0.486369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 9, in <module>
    prnt(mes)
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:11:25) 
-- CODE:
from numpy import *
tr = array(eval(input("b: ")))
maior_tr = max(tr)
i = 0
while(i<size(tr)):
	if(tr[i] == maior_tr):
		mes = i + 1
	i = i + 1
print(mes)
-- EXECUTION TIME:
0.508086
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
